--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@shopify/react-native-skia": "0.1.172",
     "buffer": "^6.0.3",
     "expo": "~48.0.6",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.14",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "~1.9.0",
     "react-native-paper": "^5.4.1",
+    "react-native-pell-rich-editor": "^1.10.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-safe-area-view": "^1.1.1",
